--- a/CV/resources/css/main.css
+++ b/CV/resources/css/main.css
@@ -1,38 +1,95 @@
-div {
-    display: inherit;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 .main-page {
-    background-color: rgba(160, 208, 214, 0.534);
-    box-shadow: 10px 5px 50px 0px rgb(123, 122, 124);
     width: 21cm;
     height: 29.7cm;
-    margin: 30mm 25mm 30mm 25mm; 
     display: grid;
-    grid-template-columns: 2fr 50px 1fr 3fr;
-    grid-template-rows: 2fr 2.5fr 2.5fr 2.5fr;
-} 
-
+    grid-template-columns: 0.5fr 1.5fr 50px 1fr 3fr 50px;
+    grid-template-rows: 2fr 2.5fr 2.5fr 2.5fr 50px;
+    margin: 30mm 25mm 30mm 25mm;
+    background-color: rgba(160, 208, 214, 0.534);
+    box-shadow: 10px 5px 50px 0px #34495e;
+}
 .left-color-box {
     display: grid;
     background-color: rgb(43, 49, 61);
-    grid-row: 1 / 5;
-    grid-column: 1 / 2;
+    grid-row: 1 / end;
+    grid-column: 1 / 3;
 }
-
 .photo {
     display: grid;
-    grid-column: 1 / 1;
     grid-row: 1 / 1;
+    grid-column: 2;
     align-items: center;
-    justify-items: center;
+    justify-items: start;
 }
 .avatar-img {
     width: 55%;
     border-radius: 50%;
 }
+.contact-block,
+.vaccine-block,
+.feature-block {
+    justify-content: start;
+    color: aliceblue;
+}
+.contact-block {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+.about-me-block {
+	grid-row: 2 / 3;
+	grid-column: 4 / 6;
+}
+.address {
+	margin-top: 10px;
+}
+.vaccine-block {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+.feature-block {
+    grid-row: 4 / 5;
+    grid-column: 2 / 3;
+}
+.vaccine,
+.contact,
+.features,
+.about-me {
+    font-weight: 300;
+    font-size: 22px;
+	 margin-bottom: 0;
+}
+.dash {
+    margin-left: 0;
+    width:30px;
+    height:0px;
+}
+.feature-item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 10px 0;
+}
+.dots-box {
+	display: flex;
+	gap: 5px;
+   margin-right: 30px;
+}
+.dot {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background-color: gray;
+}
+
+.dot.filled {
+	background-color: white;
+}
+
 .author {
-    grid-column: 3 / end;
+    grid-column: 4 / end;
 }
 .author-name {
     font-size: 50px;
