--- a/CV/resources/scss/style.scss
+++ b/CV/resources/scss/style.scss
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	box-sizing: border-box;
+	--gray-blue-color: rgb(43, 49, 61);
 }
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -15,9 +16,9 @@ body {
 	background-color: rgba(240, 240, 240, 0.534);
 	box-shadow: 10px 5px 50px 0px #34495e;
 }
-.left-color-box {
+.left-color-grid {
 	display: grid;
-	background-color: rgb(43, 49, 61);
+	background-color: var(--gray-blue-color, gray);
 	grid-row: 1 / end;
 	grid-column: 1 / 3;
 }
@@ -25,8 +26,7 @@ body {
 	display: grid;
 	grid-row: 1 / 1;
 	grid-column: 2;
-	align-items: center;
-	justify-items: start;
+	align-items: end;
 }
 .avatar-img {
 	width: 75%;
@@ -60,7 +60,7 @@ body {
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
-.experience-date {
+.experience-date-grid {
 	display: grid;
 	grid-row: 3;
 	grid-column: 4;
@@ -69,7 +69,7 @@ body {
 .date-entry {
 	font-style: italic;
 }
-.experience-desc {
+.experience-desc-grid {
 	display: grid;
 	grid-row: 3;
 	grid-column: 5;
@@ -133,9 +133,9 @@ body {
 	background-color: white;
 }
 .dot.black {
-	background-color: rgb(43, 49, 61);
+	background-color: var(--gray-blue-color);
 }
-.author {
+.author-block {
 	grid-column: 4 / end;
 	margin-top: 50px;
 }
